@@ -59,6 +59,16 @@ Stats {
 	LogFile on
 
 	#
+	# Set Logfile buffer size. Default is 0.
+	# You can set the size of the connection logging buffer size. This
+	# value determines how often the logging information is written to
+	# the harddisk. High values improves performances. If your firewall
+	# is very busy and you need connection logging, use a big buffer. 
+	# Default buffer size is 0 that means direct write through.
+	#
+	#LogFileBufferSize 4096
+
+	#
 	# Enable connection logging via Syslog. Default is off.
 	# Syslog: on, off or a facility name (daemon (default) or local0..7)
 	# If you set the facility, use the same as in the General clause, 
